# sketchybarrc.py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sketchybarrc/: __init__.py  _types.py  command.py  properties.py
tests/: test_command.py  test_properties.py  test_types.py
